# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.201 2008/03/16 19:42:58 mpagano Exp $

*git-sources-2.6.25_rc5-r7 (16 Mar 2008)

  16 Mar 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc5-r7.ebuild:
  Version bump

*git-sources-2.6.25_rc5-r6 (16 Mar 2008)

  16 Mar 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc5-r6.ebuild:
  Version bump

*git-sources-2.6.25_rc5-r5 (15 Mar 2008)

  15 Mar 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc5-r5.ebuild:
  Version bump

*git-sources-2.6.25_rc5-r4 (14 Mar 2008)

  14 Mar 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc5-r4.ebuild:
  Version bump

*git-sources-2.6.25_rc5-r3 (13 Mar 2008)

  13 Mar 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc5-r3.ebuild:
  Version bump

*git-sources-2.6.25_rc5-r2 (11 Mar 2008)

  11 Mar 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc5-r2.ebuild:
  Version bump

*git-sources-2.6.25_rc5-r1 (11 Mar 2008)

  11 Mar 2008; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.25_rc3-r1.ebuild, -git-sources-2.6.25_rc3-r2.ebuild,
  -git-sources-2.6.25_rc3-r3.ebuild, -git-sources-2.6.25_rc3-r4.ebuild,
  -git-sources-2.6.25_rc3-r5.ebuild, -git-sources-2.6.25_rc3-r6.ebuild,
  +git-sources-2.6.25_rc5-r1.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.25_rc4-r3 (08 Mar 2008)

  08 Mar 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc4-r3.ebuild:
  Version bump

*git-sources-2.6.25_rc4-r2 (07 Mar 2008)

  07 Mar 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.25_rc4-r2.ebuild:
  Version bump

*git-sources-2.6.25_rc4-r1 (06 Mar 2008)

  06 Mar 2008; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.25_rc2-r1.ebuild, -git-sources-2.6.25_rc2-r2.ebuild,