@@ -1,8 +1,4 @@
 DIST linux-2.6.24.tar.bz2 46737783 RMD160 0e5194c69c3d82c41ece689c4f84e638f8776d34 SHA1 351aebc784a5395fe4c92d1e514a89680482f7e2 SHA256 413c64fbbcf81244cb5571be4963644a1e81166a2b0f008a016528363b65c5d3
-DIST patch-2.6.25-rc4-git1.bz2 25564 RMD160 441ddfa69bbf24e249b2d34ff4122602dea8a9ce SHA1 27724f9a33fa909be2fa88a6be6d4c9416ecd785 SHA256 0cf233301afe19725b3fb6bc6f31f5697a982b606812e12bbd480d4cfb245c6a
-DIST patch-2.6.25-rc4-git2.bz2 62290 RMD160 f6d1813e52afe42a34be0e2ed10075c5ab63912c SHA1 5f1871378915e5a2cecf0f2576fae38b7b688d3e SHA256 39e614cde06c2a1185a7618f4cdbb036cf25c304f0a7b9e4ef55328fb3fa1cf3
-DIST patch-2.6.25-rc4-git3.bz2 78338 RMD160 0167dd34e63ebe09a96e4d00bbc97f81496109e5 SHA1 912570f93e0777b192ec4a96c93ce393e40d91a8 SHA256 b41e660fb93c51749f206f724e656860ff1af9bc195eec833a90bedee3468b7f
-DIST patch-2.6.25-rc4.bz2 9070810 RMD160 570337b5a1ad9b3b9bbda0446367e7c538b7634d SHA1 003ddd4bba317d87ff1b02baf5fb03222dec9e02 SHA256 781656a17fe24b018ab2c33c2481c2a07e9abfa9c6203995e2fbf7c852adda3a
 DIST patch-2.6.25-rc5-git1.bz2 46032 RMD160 ab253364432eaab296fc47514266c21b1354e88b SHA1 f9e2d02f641b908a4fbdc82bc6cabe3d90f17767 SHA256 1303fbf19a70d8aa95df94a486b96c90296b2138c8751fa1691bac62e3327b62
 DIST patch-2.6.25-rc5-git2.bz2 49916 RMD160 c5692986c64a479df01dff33810c69ccdddbc831 SHA1 563b3abbe6f78ad7f861cbdd2ff1302f16104190 SHA256 209067cc6224807be281d2743a9a04cb3823c59607db043061dce8fb69d05d72
 DIST patch-2.6.25-rc5-git3.bz2 111993 RMD160 cc340671bb287efd10d18f5bf92969424a151bc6 SHA1 908663260b086c0ea744416a2c2a8f7d5a294d92 SHA256 81dd97ca0526584168335a1d1e382c467df9d757fe8230ef47c0234888c20f15
@@ -11,9 +7,8 @@ DIST patch-2.6.25-rc5-git5.bz2 159675 RMD160 0ce18bc5ddd88e43deefe192b5a16e33bc5
 DIST patch-2.6.25-rc5-git6.bz2 162296 RMD160 9a19977b893e8c0d7a366c4bd4ab70d90e5c8993 SHA1 8598d80f152956df7a515fa26278cf8b7576c5ad SHA256 cc1e97c65b94ff670f967ee82e7d952e2f574faf470f01a592360468f322b186
 DIST patch-2.6.25-rc5-git7.bz2 174710 RMD160 7324044ee0e63000699c4ac4e55f1d82318e9d18 SHA1 eddbd9ce1dde1a1d444bb8f69a6f82b4d244c313 SHA256 801d48f6d419ae32d72f857c793024ec50d637e01d8fe22b986ce6e214f891b4
 DIST patch-2.6.25-rc5.bz2 9104892 RMD160 317505ffd50b6be14f7b9af69aeefb27c83a2d44 SHA1 cc9d526e59caa74a5cca567b339e7b371be0fd7a SHA256 06d0f3f72856fc44842e21436ead7f6d6ef43b0899116dd8623fab6bb6af4796
-EBUILD git-sources-2.6.25_rc4-r1.ebuild 1234 RMD160 fc1465027fd139708f9c72b427cd03452a8be34b SHA1 0f2a46a0d545394aba8ae5e8ea66107f12bddeb6 SHA256 5c9594474c91d812f40a9fa48d935f5780dd933020938a48451f8cce43ddcbf1
-EBUILD git-sources-2.6.25_rc4-r2.ebuild 1234 RMD160 c9e937bca4f881fa236226646600ccced75c07af SHA1 b61e8fc1ff4c2c2ed8a926bd38ae854d53d34ed4 SHA256 ebb23fa596d8a9b479b6776f6ec4481b660351e24fdd667e1a20a5188daef999
-EBUILD git-sources-2.6.25_rc4-r3.ebuild 1234 RMD160 10e2b0aa0135404ed531141767e8170cb653ec73 SHA1 e07407d3a8633adb3dd1c7d5ec3dcfe2fb7a83d1 SHA256 8e44f39e71282661f9dc90cb12e18e397cfb93526a566b4876737a1f49547de2
+DIST patch-2.6.25-rc6-git1.bz2 5618 RMD160 8edec2d5e158e41e637205ad7c7d8423dd8dd991 SHA1 ac1cbac0855f87a0bc406fac2c479ba13b54ed21 SHA256 03da2163b255572e138c02cdf7eb22f875f53b7d7f724ee2d6e916b7ff1aac7a
+DIST patch-2.6.25-rc6.bz2 9246999 RMD160 5fb0254346a161077dccc027182abbd77bdde5be SHA1 bbe008ebacfd08e3ba04f42991f2cfadd5f6f017 SHA256 c493e0265a392b5e99b5c99d274a5f4d022544035e3a77bec347011d0c94de40
 EBUILD git-sources-2.6.25_rc5-r1.ebuild 1234 RMD160 88e338c41735f1ab078ddd44b415975560c2f433 SHA1 75e2ffd565eaeef31926c1b629275737348ba22d SHA256 c0fbe41ad0aaf8e39ece3fe478db266feb09a4893c8819a185e56d9307fa8772
 EBUILD git-sources-2.6.25_rc5-r2.ebuild 1234 RMD160 b45c748d1d42f569d130ed7a2ffb4d8563805449 SHA1 e244a46a6851e6f0b3c59c5550eb980da9b7889e SHA256 0a4d12895c9842e2ae00359f160ee7f788aa0dad2edbe768e0d0b371b8d054e8
 EBUILD git-sources-2.6.25_rc5-r3.ebuild 1234 RMD160 46995e2a2d2f355420d05bc2567eaf8757f92f9e SHA1 0d6f637926243db4400478ee89456c85b2054fbf SHA256 028de99dac6e2df5bd5e46010d1af3d88b2a7744ffaceb787b72e5a6bea55120
@@ -21,5 +16,6 @@ EBUILD git-sources-2.6.25_rc5-r4.ebuild 1234 RMD160 b0f7b6da4ee0428f7941838a1ae9
 EBUILD git-sources-2.6.25_rc5-r5.ebuild 1234 RMD160 26dca09b88909fee1c6f7990b36454ff645a2591 SHA1 109e360eb3590f8d83342e2ab0777e5531f9f48c SHA256 cd4528a8903d4f3267de1358d88c62cec340120b5849396b1a704dacaede0f5a
 EBUILD git-sources-2.6.25_rc5-r6.ebuild 1234 RMD160 ea8ea29a76f9ff819ec9c3d79c7a8a8031273249 SHA1 9a33bcd59fa35c376d368ae9081fff01cb8091d2 SHA256 4158613b90ed6d95e16eef09413fa8eecec8b3df72549b9b1342ba2fa9934f80
 EBUILD git-sources-2.6.25_rc5-r7.ebuild 1234 RMD160 e4cc95096d15a819e636ab74202a1cc19f2900f3 SHA1 542a28d78c57b475e22a6bcc7db6897ce4947840 SHA256 877724fcf20bdc255ba7dd4adfa5783527c43722cf9d25831815acc329257eb6
-MISC ChangeLog 38095 RMD160 df95da5832b0152e65c9ea791e96b09c771afd26 SHA1 bc4f16a190cf6d5a78c545ac380c1022a6bde2ee SHA256 a596214dc0b7e67d73bbf00c4640204395d3532b24ad066dffdf74d59770e031
+EBUILD git-sources-2.6.25_rc6-r1.ebuild 1234 RMD160 386e4e4bb06b1191b69c80443117669ec22e999d SHA1 007d5a3bc9f443d31bd1ad40fabc59c6153444e3 SHA256 5b9c2038f480802b81376f09108118a070cbcc632a47968d6a291d59d05b21c0
+MISC ChangeLog 38369 RMD160 543deec220e95a1720209455a1260cb684b92ce0 SHA1 ad3ce3336935586d0bdb54928ffe6d975cb35723 SHA256 02c136ebd95b9fd8a5816e9db600d45d92e360f7e6adcfdf94d96ca45012f893
 MISC metadata.xml 449 RMD160 d294fadd32041f41f221d9c50a04cba964d56d2a SHA1 23042103b1ded51439d907767fe19fbde8834cf6 SHA256 5ba3a4038eb9f870f3fcc1d67c223efda046210a313bd4c0ffff7fb382e7e2d0
