@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.201 2008/03/16 19:42:58 mpagano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.202 2008/03/17 19:26:41 mpagano Exp $
+
+*git-sources-2.6.25_rc6-r1 (17 Mar 2008)
+
+  17 Mar 2008; Mike Pagano <mpagano@gentoo.org>
+  -git-sources-2.6.25_rc4-r1.ebuild, -git-sources-2.6.25_rc4-r2.ebuild,
+  -git-sources-2.6.25_rc4-r3.ebuild, +git-sources-2.6.25_rc6-r1.ebuild:
+  Version bump and old version cleanup
 
 *git-sources-2.6.25_rc5-r7 (16 Mar 2008)
 
